# nu-ecs-prac

./: .gitignore  CMakeLists.txt  README.md  a.out  build.sh  main  main.cpp  meson.build  notes.txt
code/: client_build.sh  draw_utils.cpp  ecs.cpp  ecsprac.cpp  ecsprac.h  imgui.cpp  imgui.h  platform_metrics.cpp  sdl_ecsprac.cpp  server_build.sh  sfm_ecsprac.cpp  systems.cpp  udp_client.cpp  udp_server.cpp  utils.cpp
data/scenes/: main.toml  test.toml
data/shaders/: shader.vert
include/: ComponentPool.hpp  ECSManager.hpp  ECSconsts.hpp  Scene.hpp  SceneView.hpp  TimeManager.hpp  VkBootstrap.h  vma_no_warnings.h
include/ecs/: ComponentPool.hpp  ComponentReader.hpp  ComponentReaderBase.hpp  ECSConsts.hpp  Scene.hpp  SceneView.hpp
include/ecs/components/: CircleCollider.hpp  CircleRenderer.hpp  Rigidbody.hpp  TransformComponent.hpp
include/glad/: glad.h  vulkan.h
include/input/: Input.hpp  InputCycle.hpp
include/rendering/: Color.hpp  IRenderWindow.hpp
include/rendering/SFML/: SfmlRenderWindow.hpp
include/vulkan/: VkBootstrapDispatch.h  vma_no_warnings.h
shaders/: cascade.slang  color.frag  color.slang  color.vert  cubemap.slang  depth.slang  depth.vert  shader.frag  shader.slang  shader.vert
shaders/webgpu/: default_shader.wgsl  depth_shader.wgsl
src/: ComponentPool.cpp  ECSManager.cpp  ECSconsts.cpp  Scene.cpp  SceneView.cpp  TimeManager.cpp  asset_types.h  asset_utils.cpp  component_def.h  component_info.cpp  components.h  debug.h  draw_utils.cpp  ecs.cpp  ecs.h  ecsprac.h  game.cpp  game.h  game_platform.h  glad.cpp  imgui.cpp  imgui.h  main.cpp  main.h  math_utils.cpp  meta_definitions.h  platform_metrics.cpp  renderer_gl.cpp  renderer_vk.cpp  scene_loader.cpp  skl_logger.h  systems.cpp  vk_render_types.h  vk_render_utils.cpp
src/ecs/: ComponentPool.cpp  ComponentReader.cpp  ComponentReaderBase.cpp  ECSConsts.cpp  Scene.cpp  SceneView.cpp
src/ecs/components/: CircleCollider.cpp  CircleRenderer.cpp  Rigidbody.cpp
src/imgui/: imgui.h
src/input/: InputCycle.cpp
src/math/: CMakeLists.txt  math_utils.cpp  skl_math_consts.h  skl_math_types.h  skl_math_utils.cpp  skl_math_utils.h
src/renderer/: render_backend.h  render_factory.cpp  render_types.h
src/renderer/gl_backend/: renderer_gl.cpp
src/renderer/vk_backend/: VkBootstrap.cpp  renderer_vk.cpp  renderer_vk.h  vk_render_types.h  vk_render_utils.cpp
src/renderer/wgpu_backend/: CMakeLists.txt  bind_group_wgpu.cpp  bind_group_wgpu.h  dynamic_shadow_array.cpp  dynamic_shadow_array.h  dynamic_shadow_vector_map_wgpu.h  render_backend_wgpuimpl.cpp  render_state_wgpu.h  render_types_wgpu.h  renderer_wgpu.cpp  renderer_wgpu.h  texture_array_wgpu.h
src/renderer/wpu_backend/: CMakeLists.txt  render_backend_wpuimpl.cpp  render_types_wgpu.h  renderer_wpu.cpp  renderer_wpu.h
src/rendering/: Color.cpp  IRenderWindow.cpp
src/rendering/SFML/: SfmlRenderWindow.cpp
